--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-ARC-Alkali-Rydberg-Calculator
-numpy
-scipy
-sympy
-matplotlib
+ARC-Alkali-Rydberg-Calculator==3.8.1
+asteval==1.0.6
+contourpy==1.3.2
+cycler==0.12.1
+dill==0.4.0
+fonttools==4.58.1
+h5py==3.13.0
+kiwisolver==1.4.8
+lmfit==1.3.3
+markdown-it-py==3.0.0
+matplotlib==3.10.3
+mdurl==0.1.2
+mpmath==1.3.0
+numpy==2.2.6
+packaging==25.0
+pillow==11.2.1
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+rich==14.0.0
+scipy==1.15.3
+setuptools==78.1.1
+six==1.17.0
+sympy==1.14.0
+uncertainties==3.2.3
+wheel==0.45.1
